--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -69,7 +69,6 @@ p2 {
     color: black;
 }
 
-
   .headSea {
     max-width: 930px; 
 	margin: 0 auto;
@@ -81,11 +80,9 @@ p2 {
   }
   .header {
     background-color: #ffffff;
-    height: 700px;
+    min-height: 800px;
     width: 100%;
   }
-
-
   
   .ferryWrap {
 	margin: 0 auto;
@@ -100,8 +97,82 @@ p2 {
     max-width: 700px;
     width: 90%;
 	float: left;
-
+    position: absolute;top: 700px; left: 20px;
   }
+
+  .line{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+  }
+  .line-1{
+    opacity: 0.5;
+  }
+  .line-2{
+    opacity: 0.7;
+  }
+  .line-3{
+    opacity: 0.7;
+  }
+  .line-4{
+    opacity: 0.5;
+  }
+
+  .wave{
+    position: relative;
+    left: 0;
+    width: 200%;
+    height: 100%;
+    background-repeat: repeat no-repeat;
+    background-position: 0 top;
+  }
+  .wave1{
+    -webkit-background-size: 50% 80px;
+    background-size: 50% 80px;
+      animation-name: animate;
+      animation-duration: 4s;
+    }
+  
+  .wave2{
+    -webkit-background-size: 50% 100px;
+    background-size: 50% 100px;
+    animation: animate 12s linear infinite;
+  }
+  .wave3{
+    -webkit-background-size: 50% 80px;
+    background-size: 50% 80px;
+    animation: animate 18s linear infinite;
+  }
+  
+  @keyframes animate {
+    0% {
+      background-position-x: 0;
+    }
+    100% {
+      background-position-x: 100vw;
+    }
+    }
+
+     @-webkit-keyframes rotation {
+        0% {
+          -webkit-transform: rotate(0deg);
+        }
+        25% {
+          -webkit-transform: rotate(1deg);
+        }
+        50% {
+          -webkit-transform: rotate(0deg);
+        }
+        75% {
+          -webkit-transform: rotate(-1deg);
+        }
+        100% {
+          -webkit-transform: rotate(0deg);
+        }
+      }
+  
  
 .button {
     border: none;
