--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,7 +22,7 @@
   h1 {
     font-family: 'tiempos_headlineblack', serif;
     font-size: 56px;
-    color: #294d58
+    color: black;
     }
   
   h2 {
@@ -51,53 +51,59 @@
     color: rgb(78, 77, 77);
     }  
 p {
-        font-family: 'benton_sansregular', sans-serif;
-        font-size: 16px;
-        line-height: 34px;
-        color: black;
-      }
+    font-family: 'benton_sansregular', sans-serif;
+    font-size: 16px;
+    line-height: 34px;
+    color: black;
+    }
 p2 {
-        font-family: 'benton_sansregular', sans-serif;
-        font-size: 16px;
-        line-height: 34px;
-        color: rgb(255, 255, 255);
-      }
+    font-family: 'benton_sansregular', sans-serif;
+    font-size: 16px;
+    line-height: 34px;
+    color: rgb(255, 255, 255);
+    }
 .subhead {
     font-family: 'tiempos_headlineblack', serif;
     font-size: 26px;
     line-height: 34px;
     color: black;
 }
+.fade-in {
+    opacity: 0;
+    transition: opacity 250ms ease-in;
+}
+.fade-in.appear {
+    opacity: 0;
+}
 
   .headSea {
-    max-width: 930px; 
+    max-width: 100%; 
+    height: auto;
 	margin: 0 auto;
 	float: left;
     padding-top: 50px;
     padding-left: 120px;
-    padding-right: 30px;
+    padding-right: 60px;
     text-align: left;
-  }
-  .header {
     background-color: #ffffff;
-    min-height: 800px;
-    width: 100%;
   }
-  
   .ferryWrap {
+    position: relative;
 	margin: 0 auto;
     width: 100%;
 	float: left;
-    padding-top: 50px;
-    padding-left: 40px;
-    padding-right: 300px;
+    padding-top: 0px;
+    padding-left: 7px;
+    padding-right: 0px;
   }
+
   .ferry {
 	margin: 0 auto;
-    max-width: 700px;
+    max-width: 900px;
     width: 90%;
 	float: left;
-    position: absolute;top: 700px; left: 20px;
+    position: relative;top: 0px; left: 0px;
+    animation: rotation 4s linear infinite;
   }
 
   .line{
@@ -109,6 +115,7 @@ p2 {
   }
   .line-1{
     opacity: 0.5;
+    position: relative;
   }
   .line-2{
     opacity: 0.7;
@@ -117,7 +124,7 @@ p2 {
     opacity: 0.7;
   }
   .line-4{
-    opacity: 0.5;
+    opacity: 1;
   }
 
   .wave{
@@ -242,19 +249,21 @@ p2 {
     max-width: 930px; 
 	margin: 0 auto;
 	float: left;
-    padding-top: 50px;
+    padding-top: 20px;
     padding-left: 101px;
     padding-right: 30px;
     text-align: left;
     font-family: 'benton_sansregular', sans-serif;
   }
+
+
   .body {
     padding-left: 55px;
   }
   
   body {
     background-color: #294d58;
-    background-image: linear-gradient(315deg, #294d58 0%, #5f7278 100%);
+    background-image: linear-gradient(315deg, #294d58 10%, #839da5 100%);
     min-height: 100vh;
     margin: 0;
     padding-top: 0px;
@@ -267,17 +276,8 @@ p2 {
     position: relative;
     color: white;
   }
-  body:before{
-    content: '';
-    position: fixed;
-    z-index: -1;
-    top: 0px;
-    left: 120px;
-    bottom: 0px;
-    transform: translateX(-50%);
-    width: 4px;
-    background-color: white;
-  }
+
+
   body .entries{
 	margin: 0 auto;
 	float: none;
@@ -307,6 +307,17 @@ p2 {
     transform: translateY(-50%);
     left: 0px;
   }
+  body:before{
+    content: '';
+    position: fixed;
+    z-index: -1;
+    top: 0px;
+    left: 120px;
+    bottom: 0;
+    transform: translateX(-50%);
+    width: 4px;
+    background-color: white;
+  }
 
   .spacer {
     position: absolute;
@@ -318,4 +329,14 @@ p2 {
     padding-right: 0px;
   }
   
+  .reveal{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
   
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
