Commit before present

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -36,13 +36,17 @@
     line-height: 34px;
     color: black;
   }
-  h4 {
-    font-family: 'benton_sansbold', sans-serif;
+  .label {
+    font-family: 'benton_sansregular', sans-serif;
     font-size: 16px;
     text-transform: uppercase; 
     padding-bottom: 50px;
     color: #294d58;
   }
+b {
+    font-family: 'benton_sansbold', sans-serif;
+  }
+
   h5 {
     font-family: 'benton_sansregular', sans-serif;
     font-size: 26px;
