--- a/css/preview.css
+++ b/css/preview.css
@@ -29,7 +29,7 @@
     font-family: 'benton_sansregular', sans-serif;
     font-size: 16px;
     text-transform: uppercase; 
-    padding-bottom: 50px;
+    padding-bottom: 2%;
     color: #294d58;
   }
 b {
@@ -68,16 +68,16 @@ p {
     width: 100%;
 	float: left;
     padding-top: 0px;
-    padding-left: 7px;
+    padding-left: 0px;
     padding-right: 0px;
   }
 
   .ferry {
 	margin: 0 auto;
-    max-width: 900px;
+    max-width: 400px;
     width: 90%;
 	float: left;
-    position: relative;top: 0px; left: 0px;
+    position: relative;top: 0px; left: 8%;
     animation: rotation 4s linear infinite;
   }
 
@@ -178,7 +178,7 @@ a:link, a:visited {
   
   body {
     background-color: #294d58;
-    background-image: linear-gradient(315deg, #294d58 3%, #839da5 100%);
+    background-image: linear-gradient(175deg, #294d58 40%, #839da5 100%);
     min-height: 100vh;
     margin: 0;
     padding-top: 0px;
